unit test cases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:vailtdb
+spring.datasource.url=jdbc:h2:mem:vault_db
 #spring.datasource.url=jdbc:h2:file:/data/vault/velocitylimits
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=vault
